name:                condee
version:             0.0.0.0
synopsis:            A condition language parser for the TDL
-- description:         
license:             AllRightsReserved
license-file:        LICENSE
author:              Joseph Abrahamson <joseph@reifyhealth.com>
maintainer:          joseph@reifyhealth.com
copyright:           2013 (c) Joseph Abrahamson, Reify Health
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:     
    Exp
    Parse
  default-language:   Haskell2010
  build-depends:       
    base >= 4.5 && < 4.7,
    parsec


executable condee
  main-is:            src/Main.hs
  default-language:   Haskell2010
  build-depends:       
    base >= 4.5 && < 4.7,
    condee

test-suite tests
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  ghc-options:        -Wall -threaded -O0 -rtsopts
  hs-source-dirs:     tests
  default-language:   Haskell2010
  build-depends:
    base >= 4.5 && < 4.7,
    condee,
    QuickCheck,
    HUnit,
    test-framework-quickcheck2,
    test-framework-hunit,
    test-framework